unpackaged/main/default/objects/Assignment_Group_Queues__c/Assignment_Group_Queues__c.object-meta.xml
<CustomObject>
    <label>AG-Queue</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AG-Queues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>