unpackaged/main/default/objects/Assignment_Group_Queues__c/fields/QueueId__c.field-meta.xml
<CustomField>
    <fullName>QueueId__c</fullName>
    <description>Auto-populated via trigger to lookup Queue Id by Queue Name. Internal Apex usage.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QueueId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>