unpackaged/main/default/objects/Assignment_Group_Queues__c/fields/Valid_Queue__c.field-meta.xml
<CustomField>
    <fullName>Valid_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Queue</label>
    <type>Checkbox</type>
</CustomField>