unpackaged/main/default/objects/Assignment_Group_Queues__c/validationRules/Queue_Name_is_Unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Queue_Name_is_Unique</fullName>
    <active>false</active>
    <errorConditionFormula>if( ISCHANGED(  Name ), 
       IF( len(VLOOKUP(  $ObjectType.Assignment_Group_Queues__c.Fields.Name,    $ObjectType.Assignment_Group_Queues__c.Fields.Name , Name ))&gt;0,
               True,
               False),
       False
)</errorConditionFormula>
    <errorMessage>Queue already belongs to an Assignment Group.  Please remove from Assignment Group or choose another Queue</errorMessage>
</ValidationRule>